force-app/main/default/objects/Support_Case__c/Support_Case__c.object-meta.xml
<CustomObject>
    <description>Support Case</description>
    <label>Support Case</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Support Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>