force-app/main/default/objects/Support_Case__c/fields/Deployed_in_PROD__c.field-meta.xml
<CustomField>
    <fullName>Deployed_in_PROD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deployed in PROD</description>
    <inlineHelpText>Deployed in PROD</inlineHelpText>
    <label>Deployed in PROD</label>
    <type>Checkbox</type>
</CustomField>