force-app/main/default/objects/Support_Case__c/fields/Deployed_in_TRN__c.field-meta.xml
<CustomField>
    <fullName>Deployed_in_TRN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deployed in TRN</description>
    <inlineHelpText>Deployed in TRN</inlineHelpText>
    <label>Deployed in TRN</label>
    <type>Checkbox</type>
</CustomField>