force-app/main/default/objects/Support_Case__c/fields/Deployed_in_TRN_time__c.field-meta.xml
<CustomField>
    <fullName>Deployed_in_TRN_time__c</fullName>
    <label>Deployed in TRN time</label>
    <type>DateTime</type>
</CustomField>