force-app/main/default/objects/Support_Case__c/fields/Deployed_in_UAT__c.field-meta.xml
<CustomField>
    <fullName>Deployed_in_UAT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deployed in UAT</description>
    <inlineHelpText>Deployed in UAT</inlineHelpText>
    <label>Deployed in UAT</label>
    <type>Checkbox</type>
</CustomField>