force-app/main/default/objects/Support_Case__c/fields/Estimated_completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_completion_Date__c</fullName>
    <label>Estimated completion Date</label>
    <type>Date</type>
</CustomField>