force-app/main/default/objects/Support_Case__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Nice to Have</fullName>
            </value>
            <value>
                <fullName>Emergent</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Non Urgent</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>