force-app/main/default/objects/Support_Case__c/fields/Modifications__c.field-meta.xml
<CustomField>
    <fullName>Modifications__c</fullName>
    <description>Modifications</description>
    <inlineHelpText>Modifications</inlineHelpText>
    <label>Modifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>