force-app/main/default/objects/Support_Case__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>Remark</description>
    <inlineHelpText>Remark</inlineHelpText>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>