force-app/main/default/objects/Support_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assign</fullName>
            </value>
            <value>
                <fullName>Review In Progess</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>UAT Completed</fullName>
            </value>
            <value>
                <fullName>Pending on Business</fullName>
            </value>
            <value>
                <fullName>Deploy to PROD (Closed)</fullName>
            </value>
            <value>
                <fullName>Cancel (Closed)</fullName>
            </value>
            <value>
                <fullName>Rejected (Closed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>