force-app/main/default/objects/Support_Case__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject</description>
    <inlineHelpText>Subject</inlineHelpText>
    <label>Subject</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>