force-app/main/default/objects/Support_Case__c/fields/Types_of_Changes__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Changes__c</fullName>
    <description>Types of Changes</description>
    <inlineHelpText>Types of Changes</inlineHelpText>
    <label>Types of Changes</label>
    <type>TextArea</type>
</CustomField>