force-app/main/default/objects/Support_Case__c/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <description>Salesforce</description>
    <label>Salesforce</label>
</RecordType>